# live-avionics

./: Alpine.Dockerfile  Cargo.toml  README.md  musl.Dockerfile
src/: configuration.rs  handler.rs  lib.rs  main.rs  telemetry.rs
src/infra/: database.rs  mod.rs  requests.rs
