[package]
name = "liveavionics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
exitfailure = "0.5.1"
mongodb = "2.3.1"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
structopt = "0.3.21"
tokio = { version = "1.21.2", features = ["full"] }
